--- a/dune
+++ b/dune
@@ -1,26 +1,27 @@
 (dirs :standard \ node_modules)
 
-(alias 
-  (name all)
-  (deps
-     (alias_rec vite)))
+(alias
+ (name all)
+ (deps
+  (alias_rec vite)))
 
 (rule
-  (alias vite)
-   (targets (dir dist))
-   (deps
-     (alias_rec cmahome) 
-     (:vite ./vite.config.js) 
-     (:index_html ./index.html))
-   (action
-    (system "../../node_modules/.bin/vite build"))
-   (mode
-     (promote (until-clean))))
+ (alias vite)
+ (targets
+  (dir dist))
+ (deps
+  (alias_rec cmahome)
+  (:vite ./vite.config.js)
+  (:index_html ./index.html))
+ (action
+  (system "../../node_modules/.bin/vite build"))
+ (mode
+  (promote (until-clean))))
 
-  (melange.emit
-   (target output)
-   (alias cmahome)
-   (libraries app)
-   (module_systems (es6 mjs)))
-
-
+(melange.emit
+ (target output)
+ (alias cmahome)
+ (libraries app)
+ (runtime_deps src/assets/index.css)
+ (module_systems
+  (es6 mjs)))
