--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "vite": "^4.5.0",
     "vite-plugin-melange": "^2.2.0"
   }
