--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@catppuccin/tailwindcss": "^0.1.6",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
