--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vite-dev": "vite _build/default"
   },
   "dependencies": {
+    "bun": "latest",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
