--- a/src/dune
+++ b/src/dune
@@ -1,7 +1,7 @@
 (library
  (name app)
  (modes melange)
- (libraries bindings components reason-react)
+ (libraries bindings pages reason-react)
  (preprocess
   (pps melange.ppx reason-react-ppx)))
 
